deployment/kubernetes-deployment.yaml
# kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galatic-streamhub
  namespace: default
  labels:
    app: galatic-streamhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: galatic-streamhub
  template:
    metadata:
      labels:
        app: galatic-streamhub
    spec:
      serviceAccountName: galatic-streamhub-ksa # Ensure this KSA is set up for Workload Identity
      containers:
      - name: galatic-streamhub-1
        # --- IMPORTANT: Update to your new image SHA ---
        image: us-central1-docker.pkg.dev/<YOUR_GCP_PROJECT_ID>/cloud-run-source-deploy/galatic-streamhub@sha256:c17354104fe64f488099297bf6689577298349046097233e56f37ec8490fbdba
        ports:
        - containerPort: 8080
          name: http1
        resources:
          limits:
            cpu: "1000m"
            memory: "4G"
          requests: # Ensure these are set for Autopilot
            cpu: "500m"
            memory: "2G"
        startupProbe:
          tcpSocket:
            port: 8080
          failureThreshold: 1
          periodSeconds: 240
          timeoutSeconds: 240
