deployment/kubernetes-service.yaml
# kubernetes-service.yaml (modified)
apiVersion: v1
kind: Service
metadata:
  name: galatic-streamhub-svc
  namespace: default
  labels:
    app: galatic-streamhub
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Enables Container-Native Load Balancing (good for performance)
    cloud.google.com/backend-config: '{"default": "galactic-streamhub-bconfig"}' # Links to your BackendConfig
spec:
  type: NodePort # IMPORTANT: Changed from LoadBalancer
  selector:
    app: galatic-streamhub # Must match labels on your pods
  ports:
  - name: http1 # Name of the port, used by Ingress
    protocol: TCP
    port: 80    # Service listens on this port (for traffic from Ingress)
    targetPort: 8080 # Your application container's port
